@@ -9,6 +9,8 @@
 #include "cong-dispspec.h"
 #include "cong-eel.h"
 
+#if !USE_CONG_EDITOR_WIDGET
+
 GtkStyle *style_white;
 
 #include <bonobo/bonobo-widget.h>
@@ -21,6 +23,7 @@ struct CongEditorView
 	GtkWidget *root;
 	GtkWidget *inner;
 };
+#endif /* #if !USE_CONG_EDITOR_WIDGET */
 
 #if 0
 /* Avoid introducing an eel dependency for now by copying the code from eel-gdk-extensions.c and making the functions static: */
@@ -104,6 +107,7 @@ void draw_blended_line(GtkWidget *w,
 	gdk_gc_unref(gc);
 }
 
+#if !USE_CONG_EDITOR_WIDGET
 /*
   We handle folding by showing/hiding all but the first child of the vbox at the root of a xv_section_head.
   We have a CongSectionHead which stores relevant data; the vbox title widgets store pointers to this as userdata.
@@ -1427,3 +1431,5 @@ GtkWidget* cong_editor_view_get_widget(CongEditorView *editor_view)
 
 	return editor_view->root;
 }
+
+#endif /* #if !USE_CONG_EDITOR_WIDGET */
